# ResourceCompiler

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: SimpleResourceCompiler.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt  simple_recource_compiler.c  simple_resource_compiler.h  src_helper_impl.inl
test/: CMakeLists.txt  test.cpp
