# =======
# = STB =
# =======
#add_library(stb INTERFACE)
#target_include_directories(stb INTERFACE "stb/")

# ========
# = SDL2 =
# ========
#set(SDL_SHARED OFF CACHE BOOL "" FORCE)
#set(SDL_STATIC ON CACHE BOOL "" FORCE)
#add_subdirectory("SDL2/")

# ==============
# === xxHash ===
# ==============
#add_library(xxHash STATIC "xxHash/xxhash.c")
#target_include_directories(xxHash PUBLIC "xxHash/")